# SDL_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL_1  cmake_install.cmake
src/: main.c
